@@ -37,6 +37,8 @@ AM_CFLAGS += -Wall -Werror -Wshadow -Wunused -Wformat=2 -Wextra -std=gnu99
 INCLUDES = -I. -I$(srcdir) -I$(srcdir)/../libelf -I.. -I$(srcdir)/../lib
 VERSION = 1
 
+AM_CXXFLAGS = $(AM_CFLAGS:gnu99=gnu++0x)
+
 COMPILE.os = $(filter-out -fprofile-arcs, $(filter-out -ftest-coverage, \
 						       $(COMPILE)))
 
