@@ -54,6 +54,9 @@
 #include "dwarf_data"
 #include "dwarf_ref_maker"
 
+#include <type_traits>
+
+
 /* Read the comments for elfutils::dwarf first.
 
    The elfutils::dwarf_edit class is template-compatible with the logical
@@ -172,11 +175,13 @@ namespace elfutils
       template<typename die_type, typename arg_type>
       inline void set (const die_type &die, arg_type &arg)
       {
+	/* Clear the old containers first so in exceptions we can't leave
+	   the tag changed but the old containers intact.  */
 	_m_attributes.clear ();
 	_m_children.clear ();
 	_m_tag = die.tag ();
-	_m_attributes.swap (attributes_type (die.attributes (), arg));
-	_m_children.swap (children_type (die.children (), arg));
+	_m_attributes = std::move (attributes_type (die.attributes (), arg));
+	_m_children = std::move (children_type (die.children (), arg));
       }
 
     public:
