@@ -1,5 +1,7 @@
 2009-07-03  Roland McGrath  <roland@redhat.com>
 
+	* Makefile.am (AM_CXXFLAGS): New variable (from ../src/Makefile.am).
+
 	* c++/dwarf: Fix range_list canonicalizing comparisons.
 
 	* c++/dwarf_edit: Fix copy construction using a ref-maker.
